Add imgui_stdlib to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCE_FILES
 	imgui_demo.cpp
 	imgui_draw.cpp
 	imgui_widgets.cpp
+    misc/cpp/imgui_stdlib.cpp
 	examples/imgui_impl_vulkan.cpp
 	examples/imgui_impl_glfw.cpp
 	examples/imgui_impl_win32.cpp
@@ -14,7 +15,8 @@ set(HEADER_FILES
 	imconfig.h
 	imgui.h
 	imgui_internal.h
-	examples/imgui_impl_vulkan.h
+    misc/cpp/imgui_stdlib.h
+    examples/imgui_impl_vulkan.h
 	examples/imgui_impl_glfw.h
 	examples/imgui_impl_win32.h
 )
@@ -26,6 +28,8 @@ add_library(ImGui ${SOURCE_FILES} ${HEADER_FILES})
 
 target_include_directories(ImGui PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(ImGui PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/examples)
+target_include_directories(ImGui PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/misc/cpp)
+
 
 target_link_libraries(ImGui
 	Vulkan::Vulkan
